[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gibson-sdk"
version = "0.1.0"
description = "Gibson Python SDK — author agents and tools in idiomatic Python with LangChain adapter"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-status>=1.80.0",
    "protobuf>=5.29.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0",
]
cli = [
    "click>=8.0.0",
]
all = [
    "langchain-core>=0.3.0",
    "click>=8.0.0",
]

[project.scripts]
gibson = "gibson.cli:main"

[project.urls]
Homepage = "https://github.com/zero-day-ai/python-sdk"
Repository = "https://github.com/zero-day-ai/python-sdk"
Issues = "https://github.com/zero-day-ai/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gibson", "src/taxonomy", "src/intelligence"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "grpcio-tools>=1.80.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "src/**/*_pb2*.py",
    "src/**/*_pb2*.pyi",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
